Update .gitignore to exclude build and editor files
Add build output and editor files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,14 @@ dkms.conf
 
 # debug information files
 *.dwo
+
+# Build output
+Debug/
+Release/
+build/
+
+# Editor files
+.vscode/
+*.code-workspace
+
+*.lst
